olm/bundle/manifests/agent-sandbox-controller_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: agent-sandbox-controller
  name: agent-sandbox-controller
spec:
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app: agent-sandbox-controller
status:
  loadBalancer: {}
