olm/bundle/manifests/agent-sandbox-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: agent-sandbox-webhook-service
spec:
  ports:
  - name: webhook
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: agent-sandbox-controller
status:
  loadBalancer: {}
