olm/bundle/manifests/sandbox-router-svc_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: sandbox-router
    app.kubernetes.io/name: sandbox-router
  name: sandbox-router-svc
spec:
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
    targetPort: proxy
  selector:
    app.kubernetes.io/component: sandbox-router
    app.kubernetes.io/name: sandbox-router
  type: ClusterIP
status:
  loadBalancer: {}
