olm/bundle/manifests/agent-sandbox-controller_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: agent-sandbox-controller
  name: agent-sandbox-controller
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  - ports:
    - port: 8081
      protocol: TCP
  podSelector:
    matchLabels:
      app: agent-sandbox-controller
  policyTypes:
  - Ingress
  - Egress
