olm/bundle/manifests/sandbox-router_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: sandbox-router
    app.kubernetes.io/name: sandbox-router
  name: sandbox-router
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - ports:
    - protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchExpressions:
        - key: agents.x-k8s.io/sandbox-name-hash
          operator: Exists
  - ports:
    - port: 4317
      protocol: TCP
    to:
    - namespaceSelector: {}
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - port: 9090
      protocol: TCP
  - ports:
    - port: 8081
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: sandbox-router
      app.kubernetes.io/name: sandbox-router
  policyTypes:
  - Ingress
  - Egress
